sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: not found: value longuer
  for(i<- 0 to longuer-1){
               ^